<resources>
    <string name="app_name">FileExplorer</string>
    <string name="intro_text">Click on Start button to Start Scanning the SD card of your phone.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="view_results">View Results</string>
    <string name="top_10_files">Top 10 largest Files on SD Card :</string>
    <string name="average_file_size">Average File Size on SD Card is  </string>
    <string name="top_5_extensions">File extensions on SD Card with Frequencies :</string>
    <string name="bytes">bytes</string>
    <string name="scanning_files">Scanning Files on SD card</string>
    <string name="channel_name">channelname</string>
    <string name="channel_description">channeldescription</string>
    <string name="channel_id">channelId</string>
    <string name="notification_title">File Explorer</string>
    <string name="notification_content">Scanning SD card is in progress</string>
    <string name="error_sd_card">Can\'t read SD card..Please try again later</string>
    <string name="no_sd_card">No SD card available on Device..Please try on a different device</string>
</resources>
