<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.macys.com.fileexplorer.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/intro_text" />

    <Button
        android:id="@+id/start_scan_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:text="@string/start" />


    <Button
        android:id="@+id/stop_scan_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/start_scan_button"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:enabled="false"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/scanning_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@id/progressbar"
        android:gravity="center"
        android:text="@string/scanning_files"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/view_results"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:enabled="false"
        android:text="@string/view_results" />

</RelativeLayout>
