<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/files_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/files_header_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/my_toolbar"
            android:gravity="center"
            android:text="@string/top_10_files"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/files_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/files_header_text"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/average_file_size"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/files_recyclerView"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/average_file_size"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/extensions_header_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/average_file_size"
            android:gravity="center"
            android:text="@string/top_5_extensions"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/extensions_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/extensions_header_text"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical" />


    </RelativeLayout>
</ScrollView>